Added dev to resolve third party dependencies for isort

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,7 @@ commands =
 
 [testenv:lint]
 skipsdist = true
-deps =
-    -r{toxinidir}/requirements_dev.txt
+extras = dev
 commands =
     /usr/bin/env make lint
 
