update `tox` file

--- a/tox.ini
+++ b/tox.ini
@@ -11,20 +11,19 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+deps =
+    .[dev]
 commands =
     /usr/bin/env python setup.py test
 
 
 [testenv:lint]
 skipsdist = true
-extras = dev
 commands =
     /usr/bin/env make lint
 
 
 [testenv:docs]
 skipsdist = true
-deps =
-    -r{toxinidir}/requirements_dev.txt
 commands =
     /usr/bin/env make docs
