ignore F401 rule in all `__init__.py` files

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ universal = 1
 max-line-length = 99
 exclude = .tox, .git, __pycache__, .ipynb_checkpoints
 ignore = W504
+per-file-ignores =
+    cardea/*/__init__.py:F401
 
 [isort]
 include_trailing_comment = True
