Remove cardea/__init__.py from unused imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ exclude = .tox, .git, __pycache__, .ipynb_checkpoints
 ignore = W504
 per-file-ignores =
     cardea/*/__init__.py:F401
+    cardea/__init__.py:F401
 
 [isort]
 include_trailing_comment = True
