fix package dependency and tox environment

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,17 @@
 [tox]
-envlist = py35, py36, lint, docs
+envlist = python3.5, python3.6, lint, docs
 
 
 [travis]
 python =
-    3.6: py36, lint, docs
-    3.5: py35
+    3.6: python3.6, lint, docs
+    3.5: python3.5
 
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-    .[dev]
+extras = dev
 commands =
     /usr/bin/env python setup.py test
 
