revert to initial tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,18 @@
 [tox]
-envlist = python3.5, python3.6, lint, docs
+envlist = py35, py36, lint, docs
 
 
 [travis]
 python =
-    3.6: python3.6, lint, docs
-    3.5: python3.5
+    3.6: py36, lint, docs
+    3.5: py35
 
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-extras = dev
+deps =
+    .[dev]
 commands =
     /usr/bin/env python setup.py test
 
