--- a/tox.ini
+++ b/tox.ini
@@ -11,19 +11,20 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-    .[dev]
+extras = test
 commands =
     /usr/bin/env python setup.py test
 
 
 [testenv:lint]
 skipsdist = true
+extras = dev
 commands =
     /usr/bin/env make lint
 
 
 [testenv:docs]
 skipsdist = true
+extras = dev
 commands =
     /usr/bin/env make docs
