--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
     PYTHONPATH = {toxinidir}
 extras = test
 commands =
-    /usr/bin/env python setup.py test
+    /usr/bin/env make test
 
 
 [testenv:lint]
