--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [bumpversion]
-current_version = 0.1.0-dev
+current_version = 0.1.0.dev0
 commit = True
 tag = True
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
-serialize =
-	{major}.{minor}.{patch}-{release}
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<candidate>\d+))?
+serialize = 
+	{major}.{minor}.{patch}.{release}{candidate}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
