--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Generate Docs
 
 on:
   push:
-    branches: [ stable ]
+    branches: [ master ]
 
 jobs:
 
@@ -26,3 +26,4 @@ jobs:
       with:
         github_token: ${{secrets.GITHUB_TOKEN}}
         publish_dir: docs/_build/html
+        
