--- a/tox.ini
+++ b/tox.ini
@@ -27,3 +27,9 @@ commands =
 skipsdist = true
 commands =
     /usr/bin/env make docs
+
+
+[testenv:readme]
+skipsdist = true
+commands =
+    /usr/bin/env make test-readme
