upgrade python and dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [tox]
-envlist = py37, py36, lint, docs
+envlist = py3{8,9,10,11}, lint, docs
 
 
 [travis]
 python =
-    3.6: py36, lint, docs
-    3.7: py37
+    3.8: py38, lint, docs
+    3.9: py39
+    3.10: py310
+    3.11: py311
 
 
 [testenv]
